--- a/A16_Ex02/A16_Ex02.csproj
+++ b/A16_Ex02/A16_Ex02.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="Gameplay.cs" />
+    <Compile Include="Move.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="View.cs" />
@@ -43,6 +44,9 @@
       <HintPath>C:\Temp\Ex02.ConsoleUtils.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ExerciseCheckingReport.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
